# Countdown-Code

./: README.md  setup.sh
datagen/: create_datasets.py  filtering_proxy.py  format_for_rl.py  openai_client.py  openai_inference.py  prompts.py  rewards.py
environments/: AGENTS.md
environments/countdown_code/: README.md  pyproject.toml
environments/countdown_code/countdown_code/: __init__.py  countdown_code.py  reward_fns.py
verl/reasoning-safety/: .gitignore
verl/reasoning-safety/configs/rlvr/: run_qwen2.5-coder-3b-fft.sh  run_qwen2.5-coder-7b-lora.sh
verl/reasoning-safety/configs/sft/: run_qwen2.5-coder-3b-fft.sh  run_qwen2.5-coder-7b-lora.sh
verl/verl/: .gitignore
verl/verl/custom/: debug_run_qwen3_grpo_lora.sh  run_qwen2_5-3b_gsm8k_grpo_lora.sh
verl/verl/scripts/: docker-setup.sh  install_deps_leibniz.sh
verl/verl/verl/model_merger/: base_model_merger.py
verl/verl/verl/trainer/ppo/: ray_trainer.py
verl/verl/verl/workers/: fsdp_workers.py
verl/verl/verl/workers/reward_manager/: __init__.py  countdown_code.py
